--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,25 +1,52 @@
-name: release
+name: Release
+
 on:
   push:
+    branches:
+      - main
     tags:
-      - 'v*'
+      - "v*"
+  workflow_dispatch:
+
 jobs:
-  goreleaser:
-    runs-on: ubuntu-latest
+  release:
+    name: semantic-release
+    runs-on: ubuntu-20.04
+    outputs:
+      new-release-published: ${{ steps.semantic-release.outputs.new_release_published }}
+      new-release-version: ${{ steps.semantic-release.outputs.new_release_version }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Unshallow
-        run: git fetch --prune --unshallow
-      - name: Set up Go
-        uses: actions/setup-go@v2
+      - uses: actions/checkout@v3
+
+      - id: semantic-release
+        uses: cycjimmy/semantic-release-action@v3
         with:
-          go-version: 1.19
-      
-      - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v2
+          semantic_version: 18
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+  goreleaser:
+    name: GoReleaser
+    needs:
+      - release
+    if: needs.release.outputs.new-release-published == 'true' || github.ref_type == 'tag' || github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
         with:
-          version: latest
+          fetch-depth: 0
+
+      - uses: actions/setup-go@v3
+        with:
+          go-version-file: go.mod
+          cache: true
+
+    
+      - uses: goreleaser/goreleaser-action@v4
+        with:
+          distribution: goreleaser
+          version: ~> 1
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
