--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -8,23 +8,20 @@ before:
     # you may remove this if you don't need go generate
     - go generate ./...
 builds:
-  - env:
+  - id: durable
+    env:
       - CGO_ENABLED=0
     binary: durable
     ldflags:
       - -X github.com/durableio/cli/pkg/version.version=$(git describe --tags --always)
       - -X github.com/durableio/cli/pkg/version.buildTime=$(date -u '+%Y%m%d'
-    goos:
-      - linux
-      - windows
-      - darwin
-archives:
-  - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
-      386: i386
-      amd64: x86_64
+    targets:
+      - darwin_amd64
+      - darwin_arm64
+      - linux_amd64
+      - linux_arm64
+      - windows_amd64
+
 checksum:
   name_template: 'checksums.txt'
 snapshot:
