ci: fix build targets

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,8 @@ on:
 
 jobs:
   release:
+    runs-on: ubuntu-latest
     name: semantic-release
-    runs-on: ubuntu-20.04
     outputs:
       new-release-published: ${{ steps.semantic-release.outputs.new_release_published }}
       new-release-version: ${{ steps.semantic-release.outputs.new_release_version }}
@@ -31,7 +31,7 @@ jobs:
     needs:
       - release
     if: needs.release.outputs.new-release-published == 'true' || github.ref_type == 'tag' || github.event_name == 'workflow_dispatch'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
