--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,7 +13,7 @@ builds:
       - CGO_ENABLED=0
     binary: durable
     ldflags:
-      - -X github.com/durableio/cli/pkg/version.version=$(git describe --tags --always)
+      - -X github.com/durableio/cli/pkg/version.version={{.Version}}
       - -X github.com/durableio/cli/pkg/version.buildTime=$(date -u '+%Y%m%d'
     goos:
       - freebsd
@@ -26,7 +26,7 @@ builds:
       - arm
       - arm64
 archives:
-- format: zip
+- format: tar
   name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
 checksum:
   name_template: '{{ .ProjectName }}_{{ .Version }}_SHA256SUMS'
